--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+aioredis==2.0.1
 alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.6.2.post1
+asttokens==2.4.1
+async-timeout==5.0.1
 asyncpg==0.30.0
 bcrypt==4.2.1
 certifi==2024.8.30
@@ -8,6 +11,7 @@ click==8.1.7
 colorama==0.4.6
 dnspython==2.7.0
 email_validator==2.2.0
+executing==2.1.0
 fastapi==0.115.5
 fastapi-cli==0.0.5
 greenlet==3.1.1
@@ -15,6 +19,7 @@ h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.27.2
+icecream==2.1.3
 idna==3.10
 Jinja2==3.1.4
 Mako==1.3.6
@@ -26,11 +31,13 @@ pydantic==2.9.2
 pydantic-settings==2.6.1
 pydantic_core==2.23.4
 Pygments==2.18.0
+PyJWT==2.10.0
 python-dotenv==1.0.1
 python-multipart==0.0.17
 PyYAML==6.0.2
 rich==13.9.4
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 sqlmodel==0.0.22
