--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ PyJWT==2.10.0
 python-dotenv==1.0.1
 python-multipart==0.0.17
 PyYAML==6.0.2
+redis==5.2.0
 rich==13.9.4
 shellingham==1.5.4
 six==1.16.0
