--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aioredis==2.0.1
+aiosmtplib==3.0.2
 alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.6.2.post1
@@ -6,6 +7,7 @@ asttokens==2.4.1
 async-timeout==5.0.1
 asyncpg==0.30.0
 bcrypt==4.2.1
+blinker==1.9.0
 certifi==2024.8.30
 click==8.1.7
 colorama==0.4.6
@@ -14,6 +16,7 @@ email_validator==2.2.0
 executing==2.1.0
 fastapi==0.115.5
 fastapi-cli==0.0.5
+fastapi-mail==1.4.2
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
@@ -21,15 +24,16 @@ httptools==0.6.4
 httpx==0.27.2
 icecream==2.1.3
 idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 passlib==1.7.4
-pydantic==2.9.2
+pydantic==2.10.2
 pydantic-settings==2.6.1
-pydantic_core==2.23.4
+pydantic_core==2.27.1
 Pygments==2.18.0
 PyJWT==2.10.0
 python-dotenv==1.0.1
