--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 aioredis==2.0.1
 aiosmtplib==3.0.2
 alembic==1.14.0
+amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
 asttokens==2.4.1
 async-timeout==5.0.1
 asyncpg==0.30.0
 bcrypt==4.2.1
+billiard==4.2.1
 blinker==1.9.0
+celery==5.4.0
 certifi==2024.8.30
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.6
 dnspython==2.7.0
 email_validator==2.2.0
@@ -26,16 +32,19 @@ icecream==2.1.3
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+kombu==5.4.2
 Mako==1.3.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 passlib==1.7.4
+prompt_toolkit==3.0.48
 pydantic==2.10.2
 pydantic-settings==2.6.1
 pydantic_core==2.27.1
 Pygments==2.18.0
 PyJWT==2.10.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.17
 PyYAML==6.0.2
@@ -49,6 +58,9 @@ sqlmodel==0.0.22
 starlette==0.41.3
 typer==0.13.1
 typing_extensions==4.12.2
+tzdata==2024.2
 uvicorn==0.32.0
+vine==5.1.0
 watchfiles==0.24.0
+wcwidth==0.2.13
 websockets==14.1
