--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ alembic==1.14.0
 amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+asgiref==3.8.1
 asttokens==2.4.1
 async-timeout==5.0.1
 asyncpg==0.30.0
@@ -30,6 +31,7 @@ httptools==0.6.4
 httpx==0.27.2
 icecream==2.1.3
 idna==3.10
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 kombu==5.4.2
@@ -37,13 +39,16 @@ Mako==1.3.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+packaging==24.2
 passlib==1.7.4
+pluggy==1.5.0
 prompt_toolkit==3.0.48
 pydantic==2.10.2
 pydantic-settings==2.6.1
 pydantic_core==2.27.1
 Pygments==2.18.0
 PyJWT==2.10.0
+pytest==8.3.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.17
